[gd_scene load_steps=46 format=2]

[ext_resource path="res://Player/player_state_machine.gd" type="Script" id=1]
[ext_resource path="res://Player/Girl-Sheet (5).png" type="Texture" id=2]
[ext_resource path="res://Player/player.gd" type="Script" id=3]
[ext_resource path="res://Player/states/Dash.gd" type="Script" id=4]
[ext_resource path="res://Weapons/wood_staff/wood_staff.tscn" type="PackedScene" id=5]
[ext_resource path="res://Player/states/Death.gd" type="Script" id=6]
[ext_resource path="res://Player/states/motion/idle.gd" type="Script" id=7]
[ext_resource path="res://Player/states/motion/move.gd" type="Script" id=8]
[ext_resource path="res://Effects/EffectsManager.tscn" type="PackedScene" id=9]
[ext_resource path="res://Stats/Stats.tscn" type="PackedScene" id=10]
[ext_resource path="res://Camera/Camera.tscn" type="PackedScene" id=11]
[ext_resource path="res://VFX/shaders/outline.shader" type="Shader" id=12]

[sub_resource type="ShaderMaterial" id=54]
shader = ExtResource( 12 )
shader_param/outline_width = 0.5
shader_param/outline_color = null

[sub_resource type="CapsuleShape2D" id=28]
radius = 5.0
height = 10.0

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=1]
resource_name = "death"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 40, 41, 42, 43 ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle"

[sub_resource type="Animation" id=6]
resource_name = "idle_down"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=7]
resource_name = "idle_left"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=8]
resource_name = "idle_right"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11 ]
}

[sub_resource type="Animation" id=9]
resource_name = "idle_up"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15 ]
}

[sub_resource type="Animation" id=3]
resource_name = "take_damage"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "walk"
length = 1.2
loop = true

[sub_resource type="Animation" id=10]
resource_name = "walk_down"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19, 20, 21 ]
}

[sub_resource type="Animation" id=11]
resource_name = "walk_left"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 22, 23, 24, 25, 26, 27 ]
}

[sub_resource type="Animation" id=12]
resource_name = "walk_right"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 28, 29, 30, 31, 32, 33 ]
}

[sub_resource type="Animation" id=13]
resource_name = "walk_up"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 34, 35, 36, 37, 38, 39 ]
}

[sub_resource type="AnimationNodeAnimation" id=51]
animation = "death"

[sub_resource type="AnimationNodeAnimation" id=42]
animation = "idle_up"

[sub_resource type="AnimationNodeAnimation" id=43]
animation = "idle_right"

[sub_resource type="AnimationNodeAnimation" id=44]
animation = "idle_left"

[sub_resource type="AnimationNodeAnimation" id=45]
animation = "idle_down"

[sub_resource type="AnimationNodeBlendSpace2D" id=18]
blend_point_0/node = SubResource( 42 )
blend_point_0/pos = Vector2( 0, -0.9 )
blend_point_1/node = SubResource( 43 )
blend_point_1/pos = Vector2( 0.7, 0 )
blend_point_2/node = SubResource( 44 )
blend_point_2/pos = Vector2( -0.7, 0 )
blend_point_3/node = SubResource( 45 )
blend_point_3/pos = Vector2( 0, 0.9 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=46]
animation = "walk_up"

[sub_resource type="AnimationNodeAnimation" id=47]
animation = "walk_right"

[sub_resource type="AnimationNodeAnimation" id=48]
animation = "walk_down"

[sub_resource type="AnimationNodeAnimation" id=49]
animation = "walk_left"

[sub_resource type="AnimationNodeBlendSpace2D" id=25]
blend_point_0/node = SubResource( 46 )
blend_point_0/pos = Vector2( 0, -0.9 )
blend_point_1/node = SubResource( 47 )
blend_point_1/pos = Vector2( 0.7, 0 )
blend_point_2/node = SubResource( 48 )
blend_point_2/pos = Vector2( 0, 0.9 )
blend_point_3/node = SubResource( 49 )
blend_point_3/pos = Vector2( -0.7, 0 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=26]

[sub_resource type="AnimationNodeStateMachineTransition" id=27]

[sub_resource type="AnimationNodeStateMachineTransition" id=52]

[sub_resource type="AnimationNodeStateMachineTransition" id=53]

[sub_resource type="AnimationNodeStateMachine" id=19]
states/Death/node = SubResource( 51 )
states/Death/position = Vector2( -232.852, -77.825 )
states/Idle/node = SubResource( 18 )
states/Idle/position = Vector2( -356.852, -162.825 )
states/Walk/node = SubResource( 25 )
states/Walk/position = Vector2( -117.852, -162.825 )
transitions = [ "Idle", "Walk", SubResource( 26 ), "Walk", "Idle", SubResource( 27 ), "Idle", "Death", SubResource( 52 ), "Walk", "Death", SubResource( 53 ) ]
start_node = "Idle"
graph_offset = Vector2( -731.852, -246.825 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=20]

[sub_resource type="CapsuleShape2D" id=50]
radius = 12.0
height = 16.0

[node name="Player" type="KinematicBody2D" groups=["Player"]]
collision_layer = 33
collision_mask = 8
script = ExtResource( 3 )

[node name="Stats" parent="." instance=ExtResource( 10 )]
hit_point = 1000

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 54 )
position = Vector2( 0, -8 )
texture = ExtResource( 2 )
hframes = 44

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -6 )
shape = SubResource( 28 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 5 )
anims/death = SubResource( 1 )
anims/idle = SubResource( 2 )
anims/idle_down = SubResource( 6 )
anims/idle_left = SubResource( 7 )
anims/idle_right = SubResource( 8 )
anims/idle_up = SubResource( 9 )
anims/take_damage = SubResource( 3 )
anims/walk = SubResource( 4 )
anims/walk_down = SubResource( 10 )
anims/walk_left = SubResource( 11 )
anims/walk_right = SubResource( 12 )
anims/walk_up = SubResource( 13 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 19 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 20 )
parameters/Idle/blend_position = Vector2( 0.297344, 0.0107992 )
parameters/Walk/blend_position = Vector2( -0.059126, 0.473002 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 1 )

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 7 )

[node name="Move" type="Node" parent="StateMachine"]
script = ExtResource( 8 )

[node name="Dash" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="Timer" type="Timer" parent="StateMachine/Dash"]
wait_time = 0.2
one_shot = true

[node name="GhostTimer" type="Timer" parent="StateMachine/Dash"]
wait_time = 0.02
autostart = true

[node name="Death" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[node name="WeaponRaycast" type="RayCast2D" parent="."]
position = Vector2( 0, -2 )
cast_to = Vector2( 50, 0 )

[node name="WoodStaff" parent="WeaponRaycast" instance=ExtResource( 5 )]

[node name="Camera2D" parent="." instance=ExtResource( 11 )]
zoom = Vector2( 0.3, 0.3 )

[node name="PickupZone" type="Area2D" parent="."]
visible = false
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupZone"]
position = Vector2( 0, -5 )
shape = SubResource( 50 )

[node name="ItemInventory" type="Node2D" parent="."]
visible = false

[node name="EffectsManager" parent="." instance=ExtResource( 9 )]
position = Vector2( -12, -20 )

[connection signal="animation_finished" from="AnimationPlayer" to="StateMachine" method="_on_animation_finished"]
[connection signal="timeout" from="StateMachine/Dash/Timer" to="StateMachine/Dash" method="_on_Timer_timeout"]
[connection signal="timeout" from="StateMachine/Dash/GhostTimer" to="StateMachine/Dash" method="_on_GhostTimer_timeout"]
[connection signal="area_entered" from="PickupZone" to="." method="_on_PickupZone_area_entered"]
[connection signal="area_exited" from="PickupZone" to="." method="_on_PickupZone_area_exited"]
